--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://sagarhasan273.github.io/portfolio/",
   "name": "vite-react-typescript-starter",
   "private": true,
   "version": "0.0.0",
